--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>http://localhost:1313/blog/about/</title>
-    <link rel="canonical" href="http://localhost:1313/blog/about/">
+    <title>http://localhost:1313/new-blog/about/</title>
+    <link rel="canonical" href="http://localhost:1313/new-blog/about/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=http://localhost:1313/blog/about/">
+    <meta http-equiv="refresh" content="0; url=http://localhost:1313/new-blog/about/">
   </head>
 </html>
