--- a/public/about/index.html
+++ b/public/about/index.html
@@ -85,7 +85,7 @@
 </header>
 
 <section id="section">
-    <p>Testing about section.</p>
+    <p>The blog is a place for me to look into topics I find interesting, hopefully learning something along the way. You&rsquo;ll find that often entails using probabilistic or learning methods on problems dealing with decision making, but there&rsquo;s other stuff too.</p>
 
 
     
