--- a/public/404.html
+++ b/public/404.html
@@ -93,8 +93,8 @@
         
         <section class="item">
           <div>
-            <h1 class="title"><a href='http://localhost:1313/posts/well/well/well/'>Well/We&#39;ll/We(?)ll</a></h1>   
-            <div class="date">Sep 10, 2024</div>
+            <h1 class="title"><a href='http://localhost:1313/posts/deranged-probability-puzzle/'>Deranged Probability Puzzle</a></h1>   
+            <div class="date">Oct 3, 2024</div>
           </div>
         </section>
     
